--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.5.6"
+    "@astrojs/markdoc": "^0.3.1",
+    "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vue": "^2.2.1",
+    "@nanostores/vue": "^0.9.0",
+    "astro": "^2.5.7",
+    "nanostores": "^0.9.1",
+    "tailwindcss": "^3.3.2",
+    "vue": "^3.3.4"
   }
 }
