--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "tokens-web": "node './design-tokens/style-dictionary/sd.web.config.js'",
+    "tokens-tw": "node './design-tokens/style-dictionary/sd.tailwind.config.js'"
   },
   "dependencies": {
     "@astrojs/markdoc": "^0.3.1",
@@ -15,8 +17,13 @@
     "@astrojs/vue": "^2.2.1",
     "@nanostores/vue": "^0.9.0",
     "astro": "^2.5.7",
+    "js-convert-case": "^4.2.0",
+    "lodash": "^4.17.21",
     "nanostores": "^0.9.1",
+    "sass": "^1.62.1",
+    "style-dictionary": "^3.8.0",
     "tailwindcss": "^3.3.2",
+    "tinycolor2": "^1.6.0",
     "vue": "^3.3.4"
   }
 }
