--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@astrojs/markdoc": "^0.3.1",
     "@astrojs/tailwind": "^3.1.3",
     "@astrojs/vue": "^2.2.1",
+    "@fontsource/gochi-hand": "^5.0.2",
+    "@fontsource/public-sans": "^5.0.2",
     "@nanostores/vue": "^0.9.0",
     "astro": "^2.5.7",
     "js-convert-case": "^4.2.0",
