--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/gochi-hand": "^5.0.2",
     "@fontsource/public-sans": "^5.0.2",
     "@nanostores/vue": "^0.9.0",
+    "@studio-freight/lenis": "^1.0.14",
     "astro": "^2.5.7",
     "js-convert-case": "^4.2.0",
     "lodash": "^4.17.21",
