--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@astrojs/vue": "^2.2.1",
     "@fontsource/gochi-hand": "^5.0.2",
     "@fontsource/public-sans": "^5.0.2",
+    "@markdoc/markdoc": "^0.3.0",
     "@nanostores/vue": "^0.9.0",
     "@studio-freight/lenis": "^1.0.14",
     "astro": "^2.5.7",
     "js-convert-case": "^4.2.0",
     "lodash": "^4.17.21",
     "nanostores": "^0.9.1",
+    "popmotion": "^11.0.5",
     "sass": "^1.62.1",
     "style-dictionary": "^3.8.0",
     "tailwindcss": "^3.3.2",
